force-app/main/default/objects/Securitization_Bond_Class__c/Securitization_Bond_Class__c.object-meta.xml
<CustomObject>
    <label>Securitization Bond Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securitization Bond Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>