force-app/main/default/objects/Securitization_Bond_Class__c/fields/At_Issuance_WAL_Years__c.field-meta.xml
<CustomField>
    <fullName>At_Issuance_WAL_Years__c</fullName>
    <label>At Issuance WAL Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>