force-app/main/default/objects/Securitization_Bond_Class__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>