force-app/main/default/objects/Securitization_Bond_Class__c/fields/CUSIP__c.field-meta.xml
<CustomField>
    <fullName>CUSIP__c</fullName>
    <label>CUSIP</label>
    <length>9</length>
    <type>Text</type>
</CustomField>