force-app/main/default/objects/Securitization_Bond_Class__c/fields/Securitization__c.field-meta.xml
<CustomField>
    <fullName>Securitization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Securitization</label>
    <referenceTo>Securitization__c</referenceTo>
    <relationshipLabel>Securitization Bond Classes</relationshipLabel>
    <relationshipName>Securitization_Bond_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>