force-app/main/default/objects/Securitization_Bond_Class__c/fields/Spread_BPS__c.field-meta.xml
<CustomField>
    <fullName>Spread_BPS__c</fullName>
    <label>Spread</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>